--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -15,8 +15,8 @@
 
     {% include footer.html %}
 
-    <script src="/{{ site.baseurl }}/js/jquery.min.js"></script>
-    <script src="/{{ site.baseurl }}/js/bootstrap.min.js"></script>
+    <script src="{{ site.baseurl }}/js/jquery.min.js"></script>
+    <script src="{{ site.baseurl }}/js/bootstrap.min.js"></script>
   </body>
 
 </html>
