--- a/_includes/head.html
+++ b/_includes/head.html
@@ -1,12 +1,13 @@
 <head>
-    <meta charset="utf-8">
+    <meta charset="ut`-8">
     <meta name="viewport" content="width=device-width initial-scale=1" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
 
     <title>{% if page.title %}{{ page.title }}{% else %}{{ site.title }}{% endif %}</title>
     <meta name="description" content="{{ site.description }}">
 
-    <link rel="stylesheet" href="{{ site.baseurl }}/css/main.css">
-    <link href="{{ site.baseurl }}/css/bootstrap.min.css" rel="stylesheet">
+    <link rel="stylesheet" type="text/css" href="{{ site.baseurl }}/css/bootstrap.min.css">
+    <link rel="stylesheet" type="text/css" href="{{ site.baseurl }}/css/main.css">
     <link rel="canonical" href="{{ page.url }}">
+
 </head>
