--- a/_includes/header.html
+++ b/_includes/header.html
@@ -31,10 +31,10 @@
           <div class="collapse navbar-collapse navbar-ex1-collapse">
             <ul class="nav navbar-nav">
               <li>
-                <a class="" href="#tutorials">Tutorials</a>
+                <a class="" href="{{ site.baseurl }}/index.html#tutorials">Tutorials</a>
               </li>
               <li>
-                <a class="" href="#about">About</a>
+                <a class="" href="{{ site.baseurl }}/index.html#about">About</a>
               </li>
             </ul>
           </div>
