--- a/_includes/header.html
+++ b/_includes/header.html
@@ -34,6 +34,9 @@
                 <a class="" href="{{ site.baseurl }}/index.html#tutorials">Tutorials</a>
               </li>
               <li>
+                <a class="" href="{{ site.baseurl }}//news.html#tutorials">Tutorials</a>
+              </li>
+              <li>
                 <a class="" href="{{ site.baseurl }}/index.html#about">About</a>
               </li>
             </ul>
