--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -1,7 +1,8 @@
 ---
 layout: default
 ---
-<div class="post">
+<div class="news">
+  <div class="content">
 
   <header class="post-header">
     <h1 class="post-title">{{ page.title }}</h1>
@@ -11,5 +12,6 @@ layout: default
   <article class="post-content">
     {{ content }}
   </article>
+  </div>
 
 </div>
