small fixes to links and name of files

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -31,7 +31,7 @@
           <div class="collapse navbar-collapse navbar-ex1-collapse">
             <ul class="nav navbar-nav">
               <li>
-                <a class="" href="{{ site.baseurl }}/index.html#tutorials">Tutorials</a>
+                <a class="" href="{{ site.baseurl }}/news.html">News</a>
               </li>
               <li>
                 <a class="" href="{{ site.baseurl }}//news.html#tutorials">Tutorials</a>
