--- a/_includes/head.html
+++ b/_includes/head.html
@@ -8,6 +8,10 @@
 
     <link rel="stylesheet" type="text/css" href="{{ site.baseurl }}/css/bootstrap.min.css">
     <link rel="stylesheet" type="text/css" href="{{ site.baseurl }}/css/main.css">
+    <link rel="stylesheet" type="text/css" href="{{ site.baseurl }}/css/gamers.css">
+    <link rel="stylesheet" type="text/css" href="{{ site.baseurl }}/css/typography.css">
+    <!-- FONT ICON (FONT-AWESOME) -->
+    <link rel="stylesheet"  href="{{ site.baseurl }}/assets/font-awesome/css/font-awesome.min.css">
     <link rel="canonical" href="{{ page.url }}">
 
 </head>
