--- a/_includes/header.html
+++ b/_includes/header.html
@@ -6,14 +6,6 @@
 
     <nav class="site-nav">
 
-      <!--<div class="trigger">-->
-        <!--{% for page in site.pages %}-->
-          <!--{% if page.title %}-->
-          <!--<a class="page-link" href="{{ page.url | prepend: site.baseurl }}">{{ page.title }}</a>-->
-          <!--{% endif %}-->
-        <!--{% endfor %}-->
-      <!--</div>-->
-
       <!-- Navigation -->
       <nav class="navbar navbar-default navbar-fixed-top" role="navigation">
         <div class="container">
@@ -24,28 +16,32 @@
               <span class="icon-bar"></span>
               <span class="icon-bar"></span>
             </button>
-            <a class="navbar-brand page-scroll" href="#">Gamers Who Code</a>
+            <!-- <a class="navbar-brand page-scroll" href="#">Gamers Who Code</a> -->
           </div>
 
 
           <div class="collapse navbar-collapse navbar-ex1-collapse">
             <ul class="nav navbar-nav">
               <li>
-                <a class="" href="{{ site.baseurl }}/news.html">News</a>
+                <a href="{{ site.baseurl }}/index.html">
+                    <i class="fa fa-home"></i> Gamers Who Code
+                </a>
               </li>
               <li>
-                <a class="" href="{{ site.baseurl }}//news.html#tutorials">Tutorials</a>
+                <a href="{{ site.baseurl }}/news.html">
+                    <i class="fa fa-th"></i> News
+                </a>
               </li>
               <li>
-                <a class="" href="{{ site.baseurl }}/index.html#about">About</a>
+                <a href="{{ site.baseurl }}/tutorials.html">
+                    <i class="fa fa-spinner"></i> Tutorials
+                </a>
               </li>
             </ul>
           </div>
         </div>
       </nav>
     </nav>
-
-
 
   </div>
 
