--- a/_includes/header.html
+++ b/_includes/header.html
@@ -24,7 +24,7 @@
             <ul class="nav navbar-nav">
               <li>
                 <a href="{{ site.baseurl }}/index.html">
-                    <i class="fa fa-home"></i> Gamers Who Code
+                    <i class="home-logo"></i> Gamers Who Code
                 </a>
               </li>
               <li>
