- added space shooter link - fixed bug on posts

--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -21,7 +21,7 @@ layout: default
     <div class="row">
       <div class="col-md-6">
         <div class="section-heading text-left">
-          <h5>{{ page.date | date: "%b %-d, %Y" }}{% if page.author %} • {{ page.author }}{% endif %}}</h5>
+          <h5>{{ page.date | date: "%b %-d, %Y" }}{% if page.author %} • {{ page.author }}{% endif %}</h5>
           <p>
             {% if page.meta %} • {{ page.meta }}{% endif %}
 
